--- a/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-members.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-members.component.html
@@ -15,19 +15,33 @@
     limitations under the License.
 
 -->
-<h3>{{ members?.length }} direct members</h3>
 <mat-card>
   <form [formGroup]="form" *ngIf="form">
-    <mat-checkbox formControlName="isNotificationsEnabled">Enable notifications when members are added to this API</mat-checkbox>
+    <div class="card__header">
+      <div>
+        <h3>{{ members?.length }} direct members</h3>
+        <p>
+          API members can be a user or group. Each member has roles to manage and perform certain tasks and operations in the API according
+          to their role's permissions.
+        </p>
+      </div>
+      <div>
+        <button *gioPermission="{ anyOf: ['api-member-c'] }" mat-raised-button type="button" (click)="addMember()" color="primary">
+          <mat-icon svgIcon="gio:plus"></mat-icon> Add members
+        </button>
+      </div>
+    </div>
 
-    <table
-      mat-table
-      *ngIf="dataSource"
-      [dataSource]="dataSource"
-      class="api-portal-members__table"
-      formGroupName="members"
-      aria-label="members table"
-    >
+    <gio-form-slide-toggle class="card__enable-notification-toggle">
+      Enable notifications when members are added to this API
+      <mat-slide-toggle
+        gioFormSlideToggle
+        formControlName="isNotificationsEnabled"
+        aria-label="Enable notifications when members are added to this API"
+      ></mat-slide-toggle>
+    </gio-form-slide-toggle>
+
+    <table mat-table *ngIf="dataSource" [dataSource]="dataSource" class="card__table" formGroupName="members" aria-label="members table">
       <ng-container matColumnDef="picture">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let member">
