--- a/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-members.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-members.component.html
@@ -51,17 +51,20 @@
       <ng-container matColumnDef="displayName">
         <th mat-header-cell *matHeaderCellDef>Name</th>
         <td mat-cell *matCellDef="let member" [class.primary-owner-name]="member.role === 'PRIMARY_OWNER'">
-          {{ member.name }}
+          {{ member.displayName }}
         </td>
       </ng-container>
       <ng-container matColumnDef="role">
         <th mat-header-cell *matHeaderCellDef>Role</th>
         <td mat-cell *matCellDef="let member">
-          <mat-select [formControlName]="member.id">
-            <mat-option *ngFor="let role of roles" [value]="role.name" [disabled]="role.name === 'PRIMARY_OWNER'">{{
-              role.name
-            }}</mat-option>
-          </mat-select>
+          <mat-form-field>
+            <mat-select [formControlName]="member.id">
+              <mat-option *ngFor="let role of roles" [value]="role.name" [disabled]="role.name === 'PRIMARY_OWNER'">{{
+                role.name
+              }}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="form.get('members').get(member.id).hasError('required')"> Role is required. </mat-error>
+          </mat-form-field>
         </td>
       </ng-container>
       <ng-container matColumnDef="delete">
@@ -78,4 +81,4 @@
   </form>
 </mat-card>
 
-<gio-save-bar [form]="form" [formInitialValues]="formInitialValues" (submitted)="onSubmit()"></gio-save-bar>
+<gio-save-bar [form]="form" (resetClicked)="onReset()" (submitted)="onSubmit()"></gio-save-bar>
