fix: show context path in api creation summary

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
@@ -53,7 +53,7 @@
         <div class="step-6-summary__step__info">
           <div class="step-6-summary__step__info__row">
             <span class="step-6-summary__step__info__key">Path:</span>
-            <span class="step-6-summary__step__info__value">/my-new-api</span>
+            <span class="step-6-summary__step__info__value">{{ paths.join(', ') }}</span>
           </div>
           <div class="step-6-summary__step__info__row">
             <span class="step-6-summary__step__info__key">Type:</span>
