--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-2-config.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-2-config.component.html
@@ -23,7 +23,7 @@
   </div>
 
   <form *ngIf="formGroup" [formGroup]="formGroup" (ngSubmit)="save()">
-    <div class="api-creation-v4__form-container" *ngIf="hasListeners">
+    <div id="listeners" class="api-creation-v4__form-container" *ngIf="hasListeners">
       <h3>Configure common entrypoints fields</h3>
       <h4 class="api-creation-v4__form-container__subTitle">Entrypoints context</h4>
       <gio-form-listeners-context-path *ngIf="!this.enableVirtualHost" formControlName="paths"></gio-form-listeners-context-path>
