--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.html
@@ -57,7 +57,7 @@
           </div>
           <div class="step-6-summary__step__info__row">
             <span class="step-6-summary__step__info__key">Type:</span>
-            <span class="gio-badge-accent" *ngFor="let listener of currentStepPayload.listeners">{{ listener.type }}</span>
+            <span class="gio-badge-accent" *ngFor="let listenerType of listenerTypes">{{ listenerType }}</span>
           </div>
           <div class="step-6-summary__step__info__row">
             <span class="step-6-summary__step__info__key">Entrypoints:</span>
