chore: bump ui-particles-angular
Note for test changes:
By default if the user has no interaction with the "gio-form-json-schema" component (untouched) he does not send an event and therefore the default values of the Json-schema.
This should not be a problem as the backend should also use these default values

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3-endpoints/step-3-endpoints-2-config.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-3-endpoints/step-3-endpoints-2-config.component.html
@@ -28,10 +28,7 @@
     <ng-container *ngFor="let endpoint of selectedEndpoints">
       <div class="api-creation-v4__form-container" *ngIf="endpointSchemas[endpoint.id]">
         <h3>{{ endpoint.name }}</h3>
-        <gio-form-json-schema
-          [jsonSchema]="endpointSchemas[endpoint.id]"
-          [formGroup]="$any(formGroup.get(endpoint.id))"
-        ></gio-form-json-schema>
+        <gio-form-json-schema [jsonSchema]="endpointSchemas[endpoint.id]" [formControlName]="endpoint.id"></gio-form-json-schema>
       </div>
     </ng-container>
 
