--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-2-config.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-2-entrypoints/step-2-entrypoints-2-config.component.html
@@ -44,11 +44,7 @@
     <ng-container *ngFor="let entrypoint of selectedEntrypoints">
       <div *ngIf="entrypointSchemas[entrypoint.id]" class="api-creation-v4__form-container">
         <h3>{{ entrypoint.name }}</h3>
-        <gio-form-json-schema
-          [jsonSchema]="entrypointSchemas[entrypoint.id]"
-          [formGroup]="$any(formGroup.get(entrypoint.id))"
-          [initialValue]="entrypointInitialValues[entrypoint.id]"
-        ></gio-form-json-schema>
+        <gio-form-json-schema [jsonSchema]="entrypointSchemas[entrypoint.id]" [formControlName]="entrypoint.id"></gio-form-json-schema>
       </div>
     </ng-container>
 
