fix(console): display comming soon msg when more information description is empty

--- a/gravitee-apim-console-webui/src/components/gio-connector-dialog/gio-connector-dialog.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-connector-dialog/gio-connector-dialog.component.html
@@ -28,7 +28,7 @@
   <div *ngIf="pluginMoreInformation.schemaImg" class="gio-connector-dialog__content__schema">
     <img class="gio-connector-dialog__content__schema__img" [src]="pluginMoreInformation.schemaImg" [alt]="name + ' schema'" />
   </div>
-  <div class="gio-connector-dialog__content__link">
+  <div *ngIf="pluginMoreInformation.documentationUrl" class="gio-connector-dialog__content__link">
     Learn more on our <a target="_blank" [href]="pluginMoreInformation.documentationUrl | safe: 'url'">Documentation website</a>
   </div>
 </mat-dialog-content>
