--- a/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-groups-members/api-portal-groups-members.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/user-group-access/members/api-portal-groups-members/api-portal-groups-members.component.html
@@ -15,4 +15,35 @@
     limitations under the License.
 
 -->
-<mat-card class="card"> Todo </mat-card>
+<mat-card class="card" *ngFor="let group of dataSourceGroups">
+  <h3>Group {{ group.groupName }} inherited members ({{ group.dataSource.length }})</h3>
+
+  <table
+    mat-table
+    *ngIf="dataSourceGroups"
+    [dataSource]="group.dataSource"
+    class="card__table"
+    [attr.aria-label]="'Group ' + group.groupName + ' members table'"
+  >
+    <ng-container matColumnDef="picture">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let member">
+        <gio-avatar [src]="member.picture" [name]="member.displayName" size="24"></gio-avatar>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="displayName">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let member" [class.primary-owner-name]="member.role === 'PRIMARY_OWNER'">
+        {{ member.displayName }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef>Role</th>
+      <td mat-cell *matCellDef="let member">
+        {{ member.role }}
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</mat-card>
