fix(console): do not lose proxyConfig when changing the healthcheck config
(cherry picked from commit a82bb002abca85fab14e0d8b4894866f9fe4b828)

--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/configuration/api-proxy-group-endpoint-configuration.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/configuration/api-proxy-group-endpoint-configuration.component.html
@@ -29,12 +29,13 @@
     </gio-form-slide-toggle>
 
     <div *ngIf="!configurationForm.get('inherit').value">
-      <gv-schema-form
-        [attr.readonly]="isReadOnly ? isReadOnly : null"
+      <gv-schema-form-group
+        ngDefaultControl
+        formControlName="proxyConfiguration"
         [schema]="configurationSchema"
-        [values]="endpoint"
-        (:gv-schema-form:change)="onChange($event)"
-      ></gv-schema-form>
+        [attr.readonly]="configurationForm.get('proxyConfiguration').enabled ? null : true"
+        (:gv-schema-form-group:error)="onProxyConfigurationError($event.detail)"
+      ></gv-schema-form-group>
     </div>
   </mat-card>
 </form>
