feat(console): add highcharts-angular dependency with simple example

--- a/gravitee-apim-console-webui/src/shared/components/widgets/gio-chart-pie/gio-chart-pie.component.html
+++ b/gravitee-apim-console-webui/src/shared/components/widgets/gio-chart-pie/gio-chart-pie.component.html
@@ -16,3 +16,5 @@
 
 -->
 <div>This is a placeholder</div>
+
+<highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions" style="width: 100%; height: 400px; display: block"></highcharts-chart>
