--- a/gravitee-apim-console-webui/src/management/home/home-api-status/home-api-status.component.scss
+++ b/gravitee-apim-console-webui/src/management/home/home-api-status/home-api-status.component.scss
@@ -3,3 +3,20 @@
 :host {
   @include gio-layout.gio-responsive-margin-container;
 }
+
+.mat-column-picture {
+  width: 0%;
+  padding-right: 16px;
+}
+
+.mat-column-actions {
+  width: 0%;
+}
+
+.mat-column-status {
+  .status__gauge {
+    width: 56px;
+    height: 56px;
+    padding: 8px;
+  }
+}
