--- a/gravitee-apim-console-webui/src/management/home/home-api-status/home-api-status.component.html
+++ b/gravitee-apim-console-webui/src/management/home/home-api-status/home-api-status.component.html
@@ -16,122 +16,149 @@
 
 -->
 
-<gio-table-wrapper
-  [searchLabel]="searchLabel"
-  [length]="apisTableDSUnpaginatedLength"
-  [filters]="filters"
-  (filtersChange)="onFiltersChanged($event)"
->
-  <table mat-table matSort [dataSource]="apisTableDS" id="apisTable" aria-label="Apis table">
-    <!-- Picture Column -->
-    <ng-container matColumnDef="picture">
-      <th mat-header-cell *matHeaderCellDef id="picture"></th>
-      <td mat-cell *matCellDef="let element">
-        <gio-avatar [src]="element.picture" [name]="element.name" size="32" [roundedBorder]="true"></gio-avatar>
-      </td>
-    </ng-container>
+<gio-banner-info>
+  Each API is monitored by routine interrogation of its health-check endpoint. After receiving a health-check request, the API backend
+  performs the necessary verifications via probes to return its status.
+</gio-banner-info>
 
-    <!-- Display Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header id="name">Name</th>
-      <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)" title="{{ element.name }} ({{ element.version }})">
-        {{ element.name }} ({{ element.version }})
-      </td>
-    </ng-container>
+<mat-card>
+  See APIs status for
+  <mat-form-field class="time-frame">
+    <mat-label>Select time range</mat-label>
+    <mat-select [formControl]="timeFrameControl">
+      <mat-option *ngFor="let timeFrame of timeFrames" [value]="timeFrame.id">
+        {{ timeFrame.label }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
 
-    <!-- Display States Column -->
-    <ng-container matColumnDef="states">
-      <th mat-header-cell *matHeaderCellDef id="states"></th>
-      <td mat-cell *matCellDef="let element">
-        <mat-icon
-          *ngIf="element.state === 'STARTED'"
-          matTooltip="Started"
-          class="states__api-started"
-          size="20"
-          svgIcon="gio:play-circle"
-        ></mat-icon>
-        <mat-icon
-          *ngIf="element.state !== 'STARTED'"
-          matTooltip="Stopped"
-          class="states__api-not-started"
-          size="20"
-          svgIcon="gio:stop-circle"
-        ></mat-icon>
-        <mat-icon
-          *ngIf="element.isNotSynced$ | async"
-          matTooltip="API out of sync"
-          class="states__api-is-not-synced"
-          size="20"
-          svgIcon="gio:refresh-cw"
-        ></mat-icon>
-        <mat-icon
-          *ngIf="element.lifecycleState === 'PUBLISHED'"
-          matTooltip="Published"
-          class="states__api-published"
-          size="20"
-          svgIcon="gio:cloud-published"
-        ></mat-icon>
-        <mat-icon
-          *ngIf="element.lifecycleState !== 'PUBLISHED'"
-          matTooltip="Unpublished"
-          class="states__api-not-published"
-          size="20"
-          svgIcon="gio:cloud-unpublished"
-        ></mat-icon>
-        <mat-icon
-          *ngIf="element.origin === 'kubernetes'"
-          matTooltip="Kubernetes Origin"
-          class="states__api-origin"
-          size="20"
-          svgIcon="gio:kubernetes"
-        ></mat-icon>
-        <span
-          *ngIf="element.workflowBadge"
-          [ngClass]="element.workflowBadge.class"
-          class="states__api-workflow-badge"
-          [matTooltip]="element.workflowBadge.text"
-        >
-          {{ element.workflowBadge.text }}
-        </span>
-      </td>
-    </ng-container>
+  <gio-table-wrapper
+    [searchLabel]="searchLabel"
+    [length]="apisTableDSUnpaginatedLength"
+    [filters]="filters"
+    (filtersChange)="onFiltersChanged($event)"
+  >
+    <table mat-table matSort [dataSource]="apisTableDS" id="apisTable" aria-label="Apis table">
+      <!-- Picture Column -->
+      <ng-container matColumnDef="picture">
+        <th mat-header-cell *matHeaderCellDef id="picture"></th>
+        <td mat-cell *matCellDef="let element">
+          <gio-avatar [src]="element.picture" [name]="element.name" size="32" [roundedBorder]="true"></gio-avatar>
+        </td>
+      </ng-container>
 
-    <!-- API Status Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef id="status">API Status</th>
-      <td mat-cell *matCellDef="let element">
-        <gio-circular-percentage class="status__gauge" [score]="element.statusGaugeValue"></gio-circular-percentage>
-      </td>
-    </ng-container>
+      <!-- Display Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="name">Name</th>
+        <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)" title="{{ element.name }} ({{ element.version }})">
+          {{ element.name }} ({{ element.version }})
+        </td>
+      </ng-container>
 
-    <!-- Actions Column -->
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef id="actions"></th>
-      <td mat-cell *matCellDef="let element">
-        <div class="actions__edit">
-          <button
-            (click)="onViewHealthCheckClicked(element)"
-            mat-icon-button
-            aria-label="Button to view API HealthCheck"
-            matTooltip="View API HealthCheck"
+      <!-- Display States Column -->
+      <ng-container matColumnDef="states">
+        <th mat-header-cell *matHeaderCellDef id="states"></th>
+        <td mat-cell *matCellDef="let element">
+          <mat-icon
+            *ngIf="element.state === 'STARTED'"
+            matTooltip="Started"
+            class="states__api-started"
+            size="20"
+            svgIcon="gio:play-circle"
+          ></mat-icon>
+          <mat-icon
+            *ngIf="element.state !== 'STARTED'"
+            matTooltip="Stopped"
+            class="states__api-not-started"
+            size="20"
+            svgIcon="gio:stop-circle"
+          ></mat-icon>
+          <mat-icon
+            *ngIf="element.isNotSynced$ | async"
+            matTooltip="API out of sync"
+            class="states__api-is-not-synced"
+            size="20"
+            svgIcon="gio:refresh-cw"
+          ></mat-icon>
+          <mat-icon
+            *ngIf="element.lifecycleState === 'PUBLISHED'"
+            matTooltip="Published"
+            class="states__api-published"
+            size="20"
+            svgIcon="gio:cloud-published"
+          ></mat-icon>
+          <mat-icon
+            *ngIf="element.lifecycleState !== 'PUBLISHED'"
+            matTooltip="Unpublished"
+            class="states__api-not-published"
+            size="20"
+            svgIcon="gio:cloud-unpublished"
+          ></mat-icon>
+          <mat-icon
+            *ngIf="element.origin === 'kubernetes'"
+            matTooltip="Kubernetes Origin"
+            class="states__api-origin"
+            size="20"
+            svgIcon="gio:kubernetes"
+          ></mat-icon>
+          <span
+            *ngIf="element.workflowBadge"
+            [ngClass]="element.workflowBadge.class"
+            class="states__api-workflow-badge"
+            [matTooltip]="element.workflowBadge.text"
           >
-            <mat-icon svgIcon="gio:bar-chart-2"></mat-icon>
-          </button>
-        </div>
-      </td>
-    </ng-container>
+            {{ element.workflowBadge.text }}
+          </span>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <!-- API Status Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef id="status">API Status</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.status$ | async; let status">
+            <ng-container *ngIf="status.type === 'configured'">
+              <gio-circular-percentage
+                class="status__gauge"
+                matTooltip="HealthCheck availability"
+                [score]="status.healthCheckAvailability"
+              ></gio-circular-percentage>
+            </ng-container>
+            <ng-container *ngIf="status.type === 'no-data'"> No data to display </ng-container>
+            <ng-container *ngIf="status.type === 'not-configured'"> Health-check has not been configured </ng-container>
+          </ng-container>
+        </td>
+      </ng-container>
 
-    <!-- Row shown when there is no data -->
-    <tr class="mat-row" *matNoDataRow>
-      <td *ngIf="!isLoadingData && apisTableDS.length === 0" class="mat-cell" [attr.colspan]="displayedColumns.length">
-        {{ 'There is no API (yet).' }}
-      </td>
-      <td *ngIf="isLoadingData" class="mat-cell" [attr.colspan]="displayedColumns.length">
-        {{ 'Loading...' }}
-      </td>
-    </tr>
-  </table>
-</gio-table-wrapper>
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef id="actions"></th>
+        <td mat-cell *matCellDef="let element">
+          <div class="actions__edit">
+            <button
+              (click)="onViewHealthCheckClicked(element)"
+              mat-icon-button
+              aria-label="Button to view API HealthCheck"
+              matTooltip="View API HealthCheck"
+            >
+              <mat-icon svgIcon="gio:bar-chart-2"></mat-icon>
+            </button>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <!-- Row shown when there is no data -->
+      <tr class="mat-row" *matNoDataRow>
+        <td *ngIf="!isLoadingData && apisTableDS.length === 0" class="mat-cell" [attr.colspan]="displayedColumns.length">
+          {{ 'No APIs to display.' }}
+        </td>
+        <td *ngIf="isLoadingData" class="mat-cell" [attr.colspan]="displayedColumns.length">
+          {{ 'Loading...' }}
+        </td>
+      </tr>
+    </table>
+  </gio-table-wrapper>
+</mat-card>
