--- a/gravitee-apim-console-webui/src/management/home/home-api-status/home-api-status.component.html
+++ b/gravitee-apim-console-webui/src/management/home/home-api-status/home-api-status.component.html
@@ -116,17 +116,20 @@
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef id="status">API Status</th>
         <td mat-cell *matCellDef="let element">
-          <ng-container *ngIf="element.status$ | async; let status">
+          <div class="chart" *ngIf="element.status$ | async; let status">
             <ng-container *ngIf="status.type === 'configured'">
               <gio-circular-percentage
-                class="status__gauge"
+                class="chart__gauge"
                 matTooltip="HealthCheck availability"
                 [score]="status.healthCheckAvailability"
               ></gio-circular-percentage>
+              <div class="chart__health-availability-timeframe">
+                <health-availability-time-frame [option]="status.healthAvailabilityTimeFrame"></health-availability-time-frame>
+              </div>
             </ng-container>
             <ng-container *ngIf="status.type === 'no-data'"> No data to display </ng-container>
             <ng-container *ngIf="status.type === 'not-configured'"> Health-check has not been configured </ng-container>
-          </ng-container>
+          </div>
         </td>
       </ng-container>
 
