--- a/gravitee-apim-console-webui/src/management/home/home-overview/home-overview.component.html
+++ b/gravitee-apim-console-webui/src/management/home/home-overview/home-overview.component.html
@@ -15,4 +15,39 @@
     limitations under the License.
 
 -->
-Home Overview Component
+<div class="home-overview">
+  <div class="home-overview__row">
+    <mat-card class="home-overview__card">
+      <div class="mat-subheading-1">Quick Summary</div>
+      <div class="mat-body">Number of APIs</div>
+      <div class="mat-body">Number of Applications</div>
+    </mat-card>
+
+    <mat-card class="home-overview__card">
+      <div class="mat-subheading-1">API Lifecycle State</div>
+      <div class="mat-body">No content to display</div>
+    </mat-card>
+
+    <mat-card class="home-overview__card">
+      <div class="mat-subheading-1">API State</div>
+      <div class="mat-body">No content to display</div>
+    </mat-card>
+  </div>
+  <div class="home-overview__row">
+    <mat-card class="home-overview__card">
+      <div class="mat-subheading-1">API Response Status</div>
+      <div class="mat-body">No content to display</div>
+    </mat-card>
+
+    <mat-card class="home-overview__card">
+      <div class="mat-subheading-1">Top APIs</div>
+      <mat-card-subtitle>Ordered by API calls</mat-card-subtitle>
+      <div class="mat-body">No content to display</div>
+    </mat-card>
+
+    <mat-card class="home-overview__card">
+      <div class="mat-subheading-1">Request Stats</div>
+      <div class="mat-body">No content to display</div>
+    </mat-card>
+  </div>
+</div>
