feat: use analytics service types in stats component

--- a/gravitee-apim-console-webui/src/management/home/widgets/gio-request-stats/gio-request-stats.component.html
+++ b/gravitee-apim-console-webui/src/management/home/widgets/gio-request-stats/gio-request-stats.component.html
@@ -47,7 +47,7 @@
       </div>
       <div class="gio-request-stats__body__row">
         <span>Total number of requests</span>
-        <span>{{ data.total | number }}</span>
+        <span>{{ data.count | number }}</span>
       </div>
     </div>
   </div>
