--- a/gravitee-apim-console-webui/src/management/home/home-api-status/home-api-status.component.html
+++ b/gravitee-apim-console-webui/src/management/home/home-api-status/home-api-status.component.html
@@ -30,6 +30,10 @@
         {{ timeFrame.label }}
       </mat-option>
     </mat-select>
+
+    <button matSuffix mat-icon-button class="time-frame__refresh-btn" matTooltip="Refresh" (click)="onRefreshClicked($event)">
+      <mat-icon svgIcon="gio:refresh-ccw"></mat-icon>
+    </button>
   </mat-form-field>
 
   <gio-table-wrapper
