--- a/gravitee-apim-console-webui/src/management/home/widgets/gio-request-stats/gio-request-stats.component.html
+++ b/gravitee-apim-console-webui/src/management/home/widgets/gio-request-stats/gio-request-stats.component.html
@@ -23,15 +23,15 @@
     <div class="gio-request-stats__body__rows">
       <div class="gio-request-stats__body__row">
         <span>Min</span>
-        <span>{{ data.min | number : '.1-2' }} ms</span>
+        <span>{{ data.min || 0 | number : '.1-2' }} ms</span>
       </div>
       <div class="gio-request-stats__body__row">
         <span>Max</span>
-        <span>{{ data.max | number : '.1-2' }} ms</span>
+        <span>{{ data.max || 0 | number : '.1-2' }} ms</span>
       </div>
       <div class="gio-request-stats__body__row">
         <span>Average</span>
-        <span>{{ data.avg | number : '.1-2' }} ms</span>
+        <span>{{ data.avg || 0 | number : '.1-2' }} ms</span>
       </div>
     </div>
   </div>
@@ -42,11 +42,11 @@
     <div class="gio-request-stats__body__rows">
       <div class="gio-request-stats__body__row">
         <span>Requests per second</span>
-        <span>{{ data.rps | number : '.1-1' }}</span>
+        <span>{{ data.rps || 0 | number : '.1-1' }}</span>
       </div>
       <div class="gio-request-stats__body__row">
         <span>Total number of requests</span>
-        <span>{{ data.count | number }}</span>
+        <span>{{ data.count || 0 | number }}</span>
       </div>
     </div>
   </div>
