--- a/gravitee-apim-console-webui/src/management/home/home-api-health-check/health-availability-time-frame/health-availability-time-frame.component.scss
+++ b/gravitee-apim-console-webui/src/management/home/home-api-health-check/health-availability-time-frame/health-availability-time-frame.component.scss
@@ -1,11 +1,32 @@
+@use 'sass:map';
+@use '@angular/material' as mat;
+@use '@gravitee/ui-particles-angular' as gio;
+
 .health-availability-time-frame {
   &__chart {
     display: block;
     height: 56px;
     width: 300px;
   }
+
   &__no-data {
     display: flex;
     justify-content: center;
+  }
+}
+
+// Hack to share color to highcharts
+.theme-color {
+  display: none;
+  &__bad {
+    color: mat.get-color-from-palette(gio.$mat-error-palette, 'default');
+  }
+
+  &__warning {
+    color: mat.get-color-from-palette(gio.$mat-warning-palette, 'default');
+  }
+
+  &__good {
+    color: mat.get-color-from-palette(gio.$mat-success-palette, 'default');
   }
 }
