feat(console): improve gio-quick-time-range

--- a/gravitee-apim-console-webui/src/management/home/widgets/gio-quick-time-range/gio-quick-time-range.component.html
+++ b/gravitee-apim-console-webui/src/management/home/widgets/gio-quick-time-range/gio-quick-time-range.component.html
@@ -23,7 +23,7 @@
     </mat-option>
   </mat-select>
 
-  <button matSuffix mat-icon-button class="time-frame__refresh-btn" matTooltip="Refresh" (click)="onRefresh()">
+  <button matSuffix mat-icon-button class="time-frame__refresh-btn" matTooltip="Refresh" (click)="onRefresh($event)">
     <mat-icon svgIcon="gio:refresh-ccw"></mat-icon>
   </button>
 </mat-form-field>
