fix: define label in quick time range

--- a/gravitee-apim-console-webui/src/management/home/widgets/gio-quick-time-range/gio-quick-time-range.component.html
+++ b/gravitee-apim-console-webui/src/management/home/widgets/gio-quick-time-range/gio-quick-time-range.component.html
@@ -15,6 +15,7 @@
     limitations under the License.
 
 -->
+Show data for
 <mat-form-field class="time-frame">
   <mat-label>Time range</mat-label>
   <mat-select [(ngModel)]="selectedTimeFrame" (valueChange)="emitValueChange($event)">
