refactor(console): improve with ui/ux feedback

--- a/gravitee-apim-console-webui/src/management/home/home-api-health-check/home-api-health-check.component.html
+++ b/gravitee-apim-console-webui/src/management/home/home-api-health-check/home-api-health-check.component.html
@@ -138,7 +138,7 @@
               aria-label="Button to view API Health-check"
               matTooltip="View API Health-check"
             >
-              <mat-icon svgIcon="gio:bar-chart-2"></mat-icon>
+              <mat-icon svgIcon="gio:eye-empty"></mat-icon>
             </button>
           </div>
         </td>
