--- a/gravitee-apim-console-webui/src/management/api/portal/plans/edit/api-portal-plan-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/edit/api-portal-plan-edit.component.html
@@ -23,7 +23,7 @@
 </div>
 <form *ngIf="planForm" autocomplete="off" gioFormFocusInvalid [formGroup]="planForm">
   <mat-card>
-    <api-plan-form formControlName="plan" [mode]="mode" [api]="api"></api-plan-form>
+    <api-plan-form #apiPlanForm formControlName="plan" [mode]="mode" [api]="api"></api-plan-form>
   </mat-card>
 
   <gio-save-bar
@@ -31,6 +31,28 @@
     [creationMode]="mode === 'create'"
     [form]="planForm"
     [formInitialValues]="initialPlanFormValue"
+    [hideSubmitButton]="mode === 'create' && apiPlanForm.hasNextStep() === true"
     (submitted)="onSubmit()"
-  ></gio-save-bar>
+  >
+    <button
+      *ngIf="mode === 'create' && apiPlanForm.hasPreviousStep() === true"
+      mat-button
+      gioFormFocusInvalid
+      color="primary"
+      type="button"
+      (click)="apiPlanForm.previousStep()"
+    >
+      Back
+    </button>
+    <button
+      *ngIf="mode === 'create' && apiPlanForm.hasNextStep() === true"
+      mat-flat-button
+      gioFormFocusInvalid
+      color="primary"
+      type="button"
+      (click)="apiPlanForm.nextStep()"
+    >
+      Next
+    </button>
+  </gio-save-bar>
 </form>
